--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
         <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     </head>
     <body>
-        <header id="quizHeader"></header>
-        <div id="quizBody"></div>
-        <div id="quizFooter"></div>
+        <div id="wrapper">
+            <header id="quizHeader"></header>
+            <div id="quizBody"></div>
+            <div id="quizFooter"></div>
+        </div>
         <script src="assets/javascript/game.js"></script>
     </body>
 </html>
